src/objects/inscor__AvSight_RO_Issue_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>inscor__Allow_ROLine_CONS_issue_from_any_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine CONS, issue from any LOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_CONS_issue_from_any_SPEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine CONS, issue from any SPEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_CONS_issue_from_diff_CONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine CONS, issue from diff CONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_CONS_issue_from_same_CONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine CONS, issue from same CONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_LOT_issue_from_any_CONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine LOT, issue from any CONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_LOT_issue_from_any_SPEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine LOT, issue from any SPEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_LOT_issue_from_diff_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine LOT, issue from diff LOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_LOT_issue_from_same_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine LOT, issue from same LOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_SPEC_issue_from_any_CONS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine SPEC, issue from any CONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_SPEC_issue_from_any_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine SPEC, issue from any LOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_SPEC_issue_from_diff_SPEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine SPEC, issue from diff SPEC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_ROLine_SPEC_issue_from_same_SPEC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow ROLine SPEC, issue from same SPEC</label>
        <type>Checkbox</type>
    </fields>
    <label>AvSight RO Issue Settings</label>
    <pluralLabel>AvSight RO Issue Settings</pluralLabel>
</CustomObject>